# firmware

./: .gitignore  .gitlab-ci.yml  Jenkinsfile  LICENSE  Makefile  Makefile.am  Makefile.simple  README  autobuild.sh  autogen.sh  autotate.sh  autovaunt.sh  build_crimson.sh  config.h.in~  configure.ac  configure~  csmi-server  dkr_env.sh  dkr_interactive.sh  docker_autobuild.sh  flash.c  flow.c  format.py  led.c  led.h  legacy-autobuild.sh  mcu.c  mem.c  server.c  stream.c  synth_lut.c  synth_lut.h  time_it.h
.ci/: ftp-stage-tarball.sh
common/: Makefile  Makefile.am  Readme  array-utils.h  common.c  common.h  hps.h  ied.h  minmax.h  socal.h  timespec_ops.h
docs/: Crimson_Server_API.ods
hal/: .pllcalc.c.kate-swp  .properties_tate_8r.c.kate-swp  Makefile  Makefile.am  Readme  channels.h  cmd.c  cmd.h  comm_manager.c  comm_manager.h  decim_gain_lut.h  gpio_pins.h  interp_gain_lut.h  out.c  pllcalc.c  pllcalc.h  properties.c  properties.h  properties_tate.c  properties_tate_1bbrx_3g.c  properties_tate_4r4t.c  properties_tate_4r4t_3g.c  properties_tate_8r.c  properties_tate_9r7t.c  properties_tate_bbrx.c  properties_tate_nrnt.c  properties_vaunt.c  property_manager.c  property_manager.h
hal/cleanup/: TODO  a.c  b.c  c.c  d.c  expand.c  out.c  stitch.c  xmacro.c  xmacro_test.c
hal/cleanup/other/: fpga.c  lost.c  misc.c  rxtx.c  time.c  total.c  trigger.c
hal/drivers/: Makefile  Makefile.am
hal/drivers/mmap/: Makefile  Makefile.am  mmap.c  mmap.h  regmap.c  regmap.h
hal/drivers/uart/: Makefile  Makefile.am  uart.c  uart.h
hal/drivers/udp/: Makefile  Makefile.am  udp.c  udp.h
hal/utils/: Makefile.am  mkdir_p.c  mkdir_p.h  print_version.h
hal/variant_config/: channel_config.h  rtm_config.h  sample_rate_config.h  tate_fpga_config.h  tate_rtm_config.h  tate_sample_rate_config.h  tate_special_config.h  vaunt_rtm_config.h  vaunt_special_config.h
parser/: Makefile  Makefile.am  parser.c  parser.h
script/: buffer_lvl.sh  check_all_jesd.sh  generate_inter_powercycle_log.sh  gpio_control  jesd_debug.sh  memtool.c  powercycle_test_parser.sh  prog_primer  rfe_control
script/i2c_bitbang/: hex_i2c_programmer  i2c_bb  i2c_gpio.tcl  reduce_fan_speed
scripts/: gpio_control  jesd_gp.sh  powercycle_test_parser.sh  reduce_fan_speed
scripts/crimson-fpga-time-sync/: crimson-fpga-time-sync.service  crimson-fpga-time-sync.sh
scripts/i2c_bitbang/: i2c_gpio.tcl
scripts/tate/: buffer_lvl.sh  check_all_jesd.sh  fpga_image_status  generate_inter_powercycle_log.sh  pll_check.c  pll_check.sh  powercycle_test_parser.sh
scripts/vaunt/: buffer_lvl.sh
scripts/vaunt/crimson-fpga-time-sync/: README.md  crimson-fpga-time-sync.sh  crimson-fpga-time-sync.timer
